Added in amends for modal form

--- a/landing.html
+++ b/landing.html
@@ -1648,60 +1648,72 @@
                 <div class="justify-content-center row">
                     <div class="col-12 pd-modal-3-scroll-y">
                         <div class="mb-5 mb-sm-0 pd-gradient-1000w-500h pd-modal-3-form-outer">
-                            <form id="joinWaitingList" role="form" method="post" action=""> 
-                                <div class="row">
-                                    <div class="col-12 col-lg-9">
-                                        <header>
-                                            <p class="mb-2 pd-headline pd-inverted">Book Free Consultation</p>
-                                        </header>
-                                        <p class="mb-2 pd-inverted pd-sub-headline">We&apos;ll be in touch to arrange a time with you.</p> 
-                                    </div>
-                                    <div class="col-lg-3">
-                                        <img src="images/design-assets/_vivato/logo-vivato-wo.svg" alt="vivato logo" width="200" height="48" loading="lazy" class="d-lg-block d-none"> 
-                                    </div>
+                            <div class="row">
+                                <div class="col-12 col-lg-9">
+                                    <header>
+                                        <p class="mb-4 pd-headline pd-inverted">Get In Touch</p>
+                                    </header>                                     
                                 </div>
-                                <div class="row">
-                                    <div class="col-12 col-lg-6">
-                                        <div class="mb-3"> 
-                                            <label for="first_name">First Name*</label>                                             
-                                            <input id="first_name" type="text" class="form-control" name="first_name" placeholder="Enter first name" required> 
-                                        </div>                                         
-                                    </div>
-                                    <div class="col-12 col-lg-6">
-                                        <div class="mb-3"> 
-                                            <label for="last_name">Last Name*</label>                                             
-                                            <input type="text" class="form-control" id="last_name" name="last_name" placeholder="Enter your last name" required> 
-                                        </div>                                         
-                                    </div>
+                                <div class="col-lg-3">
+                                    <img src="images/design-assets/_vivato/logo-vivato-wo.svg" alt="vivato logo" width="200" height="48" loading="lazy" class="d-lg-block d-none"> 
                                 </div>
+                            </div>
+                            <form id="joinWaitingList" role="form" method="post" action="">
                                 <div class="row">
-                                    <div class="col-12 col-lg-6">
-                                        <div class="mb-3 position-relative"> 
-                                            <label for="email">Email*</label>                                             
-                                            <input id="email" type="email" class="form-control" name="email" placeholder="Enter email" required> 
-                                        </div>                                         
+                                    <div class="col-12 col-lg-5 pe-auto pe-lg-3">
+                                        <div>
+                                            <p class="pd-inverted pd-sub-headline">Give us a call, email or complete the form. We&apos;ll get in contact for an initial free consultation to discuss your project in-depth.</p>
+                                        </div>
+                                        <div class="pd-modal-3-card">
+                                            <div class="align-items-start d-flex flex-column justify-content-start mb-4">
+                                                <p class="pd-card-headline pd-inverted">Call Us</p>
+                                                <a href="tel:+442071395093" name="anchor" class="mb-4 pd-icon-card-link"><img src="images/design-assets/_vivato/phone_enabled_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg" width="20" height="20" loading="lazy" alt="phone icon"><span>020 7139 5093</span></a>
+                                                <p class="pd-card-headline pd-inverted">Email Us</p>
+                                                <a href="#" name="anchor" class="mb-4 pd-icon-card-link"><img src="/images/design-assets/_vivato/mail_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg" alt="email icon" width="20" height="20" loading="lazy"><span>hello@vivato.co.uk</span></a>
+                                            </div>
+                                        </div>                                                                                  
                                     </div>
-                                    <div class="col-12 col-lg-6">
-                                        <div class="mb-3 position-relative"> 
-                                            <label for="phone">Phone</label>                                             
-                                            <input type="tel" class="form-control" id="phone" name="telephone" placeholder="Enter Phone"> 
-                                        </div>                                         
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-12">
+                                    <div class="col-12 col-lg-7">
+                                        <div class="row">
+                                            <div class="col-12 col-md-6">
+                                                <div class="mb-3"> 
+                                                    <label for="first_name">First Name*</label>                                                     
+                                                    <input id="first_name" type="text" class="form-control" name="first_name" placeholder="Enter first name" required> 
+                                                </div>                                                                                                  
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="mb-3"> 
+                                                    <label for="last_name">Last Name*</label>                                                     
+                                                    <input type="text" class="form-control" id="last_name" name="last_name" placeholder="Enter your last name" required> 
+                                                </div>                                                                                                  
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <div class="mb-3 position-relative"> 
+                                                    <label for="email">Email*</label>                                                     
+                                                    <input id="email" type="email" class="form-control" name="email" placeholder="Enter email" required> 
+                                                </div>                                                                                                  
+                                            </div>
+                                            <div class="col-md-6">
+                                                <div class="mb-3 position-relative"> 
+                                                    <label for="phone">Phone</label>                                                     
+                                                    <input type="tel" class="form-control" id="phone" name="telephone" placeholder="Enter Phone"> 
+                                                </div>                                                                                                  
+                                            </div>
+                                        </div>
                                         <div class="mb-3"> 
                                             <label for="message">Message*</label>                                             
                                             <textarea id="message" rows="4" class="form-control" name="message" placeholder="Leave us a message" required>
     </textarea> 
-                                        </div>                                         
+                                        </div>
+                                        <button type="submit" class="pd-btn pd-btn-lg">
+                                            Submit<span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231f20">
+                                                    <path d="m553.85-253.85-42.16-43.38L664.46-450H180v-60h484.46L511.69-662.77l42.16-43.38L780-480 553.85-253.85Z"/>
+                                                </svg></span>
+                                        </button>                                                                                  
                                     </div>
-                                </div>                                 
-                                <button type="submit" class="pd-btn pd-btn-info pd-btn-lg pd-inverted">
-                                    Submit<span><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231f20">
-                                            <path d="m553.85-253.85-42.16-43.38L664.46-450H180v-60h484.46L511.69-662.77l42.16-43.38L780-480 553.85-253.85Z"/>
-                                        </svg></span>
-                                </button>
+                                </div>                                                                  
                             </form>
                         </div>                         
                     </div>
