Added in amends

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <section class=" pb-5 pd-hero-19 pt-4 pt-lg-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-lg-7 col-xl-6">
+                    <div class="col-12 col-lg-7 col-xl-6 col-xxl-7">
                         <header>
                             <h1 class="mb-2 pd-intro-heading-sm">Bespoke Business Software</h1>
                             <address class="align-items-center d-flex flex-row justify-content-start mb-4"><a href="#" class="pd-icon-label"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#44687E" class="me-1">
@@ -266,8 +266,8 @@
                                     </svg></span></a>
                         </footer>                         
                     </div>
-                    <div class="align-items-center col-12 col-lg-5 col-xl-6 d-flex flex-column justify-content-center pt-5 pt-lg-0">
-                        <div class="align-items-center d-flex flex-row justify-content-start">
+                    <div class="align-items-center align-items-lg-end col-12 col-lg-5 col-xl-6 col-xxl-5 d-flex flex-column justify-content-center pt-5 pt-lg-0">
+                        <div class="align-items-center d-flex flex-lg-row flex-row flex-sm-column justify-content-lg-start justify-content-sm-center justify-content-start pd-hero-19-col-right">
                             <div class="pd-hero-19-main-img-outer">
                                 <picture>
                                     <source srcset="/images/uploads/_vivato/hero-dev-1_result.webp" type="image/webp">
@@ -593,7 +593,7 @@
                     <div class="col-12">
                         <div class="pd-block-primary">
                             <div class="row">
-                                <div class="align-items-center col-12 col-lg-6 d-flex flex-row justify-content-center mb-4 mb-lg-0">
+                                <div class="align-items-center col-12 col-lg-6 d-flex flex-row justify-content-center justify-content-lg-start mb-4 mb-lg-0">
                                     <div class="pd-special-img-outer">
                                         <picture>
                                             <source srcset="/images/uploads/_vivato/hero-new-design-windows_result.webp">
@@ -651,7 +651,7 @@
             </div>
         </section>
         <section class="bg-light pb-5 pd-grid-6 pt-5">
-            <div class="container-xxl">
+            <div class="container">
                 <div class="row">
                     <div class="align-items-start col-12 col-lg-6 d-flex flex-column justify-content-start pb-4 pb-lg-0 pe-lg-5">
                         <div>
