Added in more focus visible and hover styles

--- a/index.html
+++ b/index.html
@@ -904,9 +904,9 @@
                 <div class="row">
                     <div class="col-12 col-lg-3 mb-4 mb-lg-0">
                         <div class="pd-grid-11-outer">
-                            <a href="#" class="align-items-center d-flex flex-row justify-content-center pd-grid-11-card"><img src="images/uploads/_vivato/tech-azure.svg" alt="tech example 1" width="160" height="160" loading="lazy"></a>
-                            <a href="#" class="align-items-center d-flex flex-row justify-content-center pd-grid-11-card"><img src="images/uploads/_vivato/tech-dot-net.svg" alt="tech example 2" width="160" height="160" loading="lazy"></a>
-                            <a href="#" class="align-items-center d-flex flex-row justify-content-center pd-grid-11-card"><img src="images/uploads/_vivato/tech-blazor.svg" alt="tech example 3" width="160" height="160" loading="lazy"></a>
+                            <a href="#" class="align-items-center d-flex flex-row justify-content-center pd-grid-11-card" tabindex="-1"><img src="images/uploads/_vivato/tech-azure.svg" alt="tech example 1" width="160" height="160" loading="lazy"></a>
+                            <a href="#" class="align-items-center d-flex flex-row justify-content-center pd-grid-11-card" tabindex="-1"><img src="images/uploads/_vivato/tech-dot-net.svg" alt="tech example 2" width="160" height="160" loading="lazy"></a>
+                            <a href="#" class="align-items-center d-flex flex-row justify-content-center pd-grid-11-card" tabindex="-1"><img src="images/uploads/_vivato/tech-blazor.svg" alt="tech example 3" width="160" height="160" loading="lazy"></a>
                         </div>                         
                     </div>
                     <div class="align-items-start col-12 col-lg-9 d-flex flex-column justify-content-start">
@@ -1079,7 +1079,7 @@
                     <div class="col-lg-6 d-flex flex-column pb-3">
                         <article class="pd-cards-18-card-lg-outer">
                             <div class="pd-cards-18-card-left-col">
-                                <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link"> <picture>
+                                <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link" tabindex="-1"> <picture>
                                         <source srcset="/images/uploads/_vivato/case-study-contego_result_mob.webp" type="image/webp">
                                         <img src="images/uploads/_vivato/case-study-contego.jpg" alt="tanazania case study" width="269" height="198" loading="lazy">
                                     </picture></a>
@@ -1108,7 +1108,7 @@
                     <div class="col-lg-6 d-flex flex-column pb-3">
                         <article class="pd-cards-18-card-lg-outer">
                             <div class="pd-cards-18-card-left-col">
-                                <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link"> <picture>
+                                <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link" tabindex="-1"> <picture>
                                         <source srcset="/images/uploads/_vivato/case-study-RIAI_result_mob.webp" type="image/webp">
                                         <img src="images/uploads/_vivato/case-study-RIAI.jpg" alt="plants growing" width="269" height="198" loading="lazy" aria-label="View article">
                                     </picture></a>
@@ -1138,7 +1138,7 @@
                     <div class="col-lg-6 d-flex flex-column pb-3">
                         <article class="pd-cards-18-card-lg-outer">
                             <div class="pd-cards-18-card-left-col">
-                                <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link"> <picture>
+                                <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link" tabindex="-1"> <picture>
                                         <source srcset="/images/uploads/_vivato/case-study-komatsu_result_mob.webp" type="image/webp">
                                         <img src="images/uploads/_vivato/case-study-komatsu.jpg" width="269" height="198" loading="lazy" alt="USA lab" aria-label="View article">
                                     </picture></a>
@@ -1162,7 +1162,7 @@
                     <div class="col-lg-6 d-flex flex-column pb-3">
                         <article class="pd-cards-18-card-lg-outer">
                             <div class="pd-cards-18-card-left-col">
-                                <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link" aria-label="View article"> <picture>
+                                <a href="#" class="pd-cards-18-card-img-outer pd-outline-for-image-link" aria-label="View article" tabindex="-1"> <picture>
                                         <source srcset="/images/uploads/_vivato/case-study-testex_result_mob.webp" type="image/webp">
                                         <img src="images/uploads/_vivato/case-study-testex.jpg" width="269" height="198" loading="lazy" alt="plastic on beach" aria-label="View article">
                                     </picture></a>
