Further fosuc amends to insights article and archive

--- a/insight-archive.html
+++ b/insight-archive.html
@@ -238,7 +238,7 @@
                         <div class="row">
                             <div class="col-12 col-md-6 d-flex mb-4">
                                 <article class="pd-cards-posts-7-card-outer">
-                                    <a href="#" class="pd-cards-posts-7-img-outer"> <picture>
+                                    <a href="#" class="pd-cards-posts-7-img-outer" tabindex="-1"> <picture>
                                             <source srcset="/images/uploads/_vivato/insights-article-1_result_mob.webp" type="image/webp">
                                             <img src="/images/uploads/_vivato/insights-article-1.jpg" alt="image of a network" width="297" height="260" loading="lazy">
                                         </picture> </a>
@@ -267,9 +267,9 @@
                             </div>
                             <div class="col-12 col-md-6 d-flex mb-4">
                                 <article class="pd-cards-posts-7-card-outer">
-                                    <a href="#" class="pd-cards-posts-7-img-outer"> <picture>
+                                    <a href="#" class="pd-cards-posts-7-img-outer" tabindex="-1"> <picture>
                                             <source srcset="/images/uploads/_vivato/insights-article-2_result_mob.webp" type="image/webp">
-                                            <img src="/images/uploads/_vivato/insights-article-2.jpg" alt="image of a roman emperor" width="297" height="260" loading="lazy">
+                                            <img src="/images/uploads/_vivato/insights-article-2.jpg" alt="image of a roman emperor" width="297" height="260" loading="lazy" tabindex="-1">
                                         </picture> </a>
                                     <div class="pd-cards-posts-7-play-outer">
                                         <a href="#" data-video-id="gHCYm7P9pYM" class="pd-watch-youtube-video" aria-label="play video"> <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ffffff">
@@ -297,7 +297,7 @@
                             </div>
                             <div class="col-12 col-md-6 d-flex mb-4">
                                 <article class="pd-cards-posts-7-card-outer">
-                                    <a href="#" class="pd-cards-posts-7-img-outer"> <picture>
+                                    <a href="#" class="pd-cards-posts-7-img-outer" tabindex="-1"> <picture>
                                             <source srcset="/images/uploads/_vivato/insights-article-3_result_mob.webp" type="image/webp">
                                             <img src="/images/uploads/_vivato/insights-article-3.jpg" alt="image of a hoodie" width="297" height="260" loading="lazy">
                                         </picture> </a>
@@ -325,7 +325,7 @@
                                 </article>                                 
                             </div>
                             <div class="col-12 col-md-6 d-flex mb-4">
-                                <article class="pd-cards-posts-7-card-outer"><a href="#" class="pd-cards-posts-7-img-outer"> <picture>
+                                <article class="pd-cards-posts-7-card-outer"><a href="#" class="pd-cards-posts-7-img-outer" tabindex="-1"> <picture>
                                             <source srcset="/images/uploads/_vivato/insights-article-4_result_mob.webp" type="image/webp">
                                             <img src="/images/uploads/_vivato/insights-article-4.jpg" alt="image of a hoodie" width="297" height="260" loading="lazy">
                                         </picture> </a>
@@ -348,7 +348,7 @@
                                 </article>                                 
                             </div>
                             <div class="col-12 col-md-6 d-flex mb-4">
-                                <article class="pd-cards-posts-7-card-outer"><a href="#" class="pd-cards-posts-7-img-outer"> <picture>
+                                <article class="pd-cards-posts-7-card-outer"><a href="#" class="pd-cards-posts-7-img-outer" tabindex="-1"> <picture>
                                             <source srcset="/images/uploads/_vivato/insights-article-5_result_mob.webp" type="image/webp">
                                             <img src="/images/uploads/_vivato/insights-article-5.jpg" width="297" height="260" loading="lazy" alt="Image of a badge">
                                         </picture> </a>
