--- a/contact.html
+++ b/contact.html
@@ -245,11 +245,15 @@
                                     <div class="align-items-start d-flex flex-column flex-lg-row justify-content-start mb-2">
                                         <div class="me-4">
                                             <p class="pd-card-headline pd-inverted">Call Us</p>
-                                            <a href="tel:+442071395093" name="anchor" class="mb-2 mb-lg-4 pd-icon-card-link"><img src="images/design-assets/_vivato/phone_enabled_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg" width="20" height="20" loading="lazy" alt="phone icon"><span>020 7139 5093</span></a>
+                                            <a href="tel:+442071395093" name="anchor" class="mb-2 mb-lg-4 pd-icon-card-link"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231F20">
+                                                    <path d="M182.39-140q-18.17 0-30.28-12T140-182v-129.69q0-14.54 9.58-26t24.73-15.46l111.07-22.62q14.39-2 27.73 1.92 13.35 3.93 22.74 13.7l89.76 90.54q43-24.31 80.08-52.54t70-61.16q33.39-33.15 62.04-69.57 28.66-36.43 50.96-77.27l-92.38-89.93q-8.77-8-12.16-19.77-3.38-11.77-1-28.15l22.93-117.69q3.15-14.54 14.73-24.42 11.58-9.89 26.73-9.89H778q18 0 30 12.11t12 30.28q0 113.07-52.58 226.99-52.58 113.93-148.15 209.7-95.58 95.76-209.69 148.34Q295.46-140 182.39-140Zm534.07-446.92Q735-629 745.35-671.31q10.34-42.3 13.42-83.3 0-2.31-1.54-3.85t-3.85-1.54h-84.92q-3.08 0-5 1.54t-2.69 4.61l-18 89.39q-.77 2.31-.19 5 .57 2.69 2.5 4.23l71.38 68.31Zm-348 344.46-70.61-71.39q-1.93-1.92-3.66-2.5-1.73-.57-4.04.2l-84 17.69q-3.07.77-4.61 2.69-1.54 1.92-1.54 5v84.15q0 2.31 1.54 3.85t3.85 1.54q37.53-1.85 80.42-12.27 42.88-10.42 82.65-28.96Zm348-344.46Zm-348 344.46Z"/>
+                                                </svg><span>020 7139 5093</span></a>
                                         </div>
                                         <div>
                                             <p class="pd-card-headline pd-inverted">Email Us</p>
-                                            <a href="#" name="anchor" class="mb-2 mb-lg-4 pd-icon-card-link"><img src="/images/design-assets/_vivato/mail_24dp_FFFFFF_FILL0_wght300_GRAD0_opsz24.svg" alt="email icon" width="20" height="20" loading="lazy"><span>hello@vivato.co.uk</span></a>
+                                            <a href="#" name="anchor" class="mb-2 mb-lg-4 pd-icon-card-link"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#231f20">
+                                                    <path d="M172.31-180Q142-180 121-201q-21-21-21-51.31v-455.38Q100-738 121-759q21-21 51.31-21h615.38Q818-780 839-759q21 21 21 51.31v455.38Q860-222 839-201q-21 21-51.31 21H172.31ZM480-457.69 160-662.31v410q0 5.39 3.46 8.85t8.85 3.46h615.38q5.39 0 8.85-3.46t3.46-8.85v-410L480-457.69Zm0-62.31 313.85-200h-627.7L480-520ZM160-662.31V-720v467.69q0 5.39 3.46 8.85t8.85 3.46H160v-422.31Z"/>
+                                                </svg><span>hello@vivato.co.uk</span></a>
                                         </div>
                                     </div>
                                     <div>
